--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "expo": "~52.0.39",
+    "expo-calendar": "~14.0.6",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "react-native-calendars": "^1.1310.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
